# token-usage-app

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  widget.html
.github/workflows/: release.yml
.omc/: project-memory.json
.omc/state/: agent-replay-77279b2a-f6fb-41da-b575-2606846e280d.jsonl  hud-stdin-cache.json  idle-notif-cooldown.json
docs/: force-update.example.json  updater-signing.md
scripts/: verify-release-assets.sh
scripts/icons/: icons.test.ts  png.ts  render.ts
scripts/screenshots/: capture.ts  fixtures.ts  shell.ts  tauri-stub.ts
src/: App.test.tsx  App.tsx  i18n.test.ts  i18n.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.omc/state/sessions/77279b2a-f6fb-41da-b575-2606846e280d/: pre-tool-advisory-throttle.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  history.rs  lib.rs  main.rs  model.rs  poller.rs  pricing.rs  settings.rs  usage.rs  xlsx.rs
src-tauri/src/providers/: claude.rs  codex.rs
src-tauri/tests/fixtures/: claude_usage.json  codex_rate_limits.json  codex_rate_limits_null.json  rollout_sample.jsonl
src/components/: EmptyState.tsx  Header.tsx  HistorySkeleton.tsx  LimitBar.test.tsx  LimitBar.tsx  ProviderCard.test.tsx  ProviderCard.tsx  ProviderCardSkeleton.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  Skeleton.test.tsx  Skeleton.tsx  Spinner.tsx  UpdateDialog.test.tsx  UpdateDialog.tsx  UpdatePreview.tsx  UpdateSettingsSection.test.tsx  UsageHistoryView.tsx  (+2 more)
(+49 files in other folders)
